# AdGuard-VPN-GUI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  install.sh  install_user.sh  pyproject.toml  run_detached.sh  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
packaging/: adguardvpn-gui.appdata.xml  adguardvpn-gui.desktop
packaging/debian/: control  install
src/adguardvpn_gui/: __init__.py  cli.py  main.py  state.py  tray.py  utils.py
src/adguardvpn_gui/ui/: main_window.ui  style.css
